# WorkingGLFWexample

./: CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  fragment_shader.glsl  main.cpp  test2_shader.glsl  test_shader.glsl  vertex_shader.glsl
glfw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
glfw/src/: Makefile  cmake_install.cmake
glfw/tests/: CMakeLists.txt  Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  timeout  title  windows
